@@ -2,9 +2,10 @@ BEEBEEP (Free Office Messenger) - CHANGELOG - (c) 2010-2021 Marco Mastroddi
 For more informations please visit https://www.beebeep.net
 
 BeeBEEP 5.8.5 (in development)
-- Added "Enable visual notifications for chat window" option menu Settings - Notifications
+- Added new protocol to manage "sent messages" but never received.
+- Added "Enable visual notifications for chat window" option menu Settings - Notifications.
 - Added "Change emoticon size in chat" option in menu Settings - Chat.
-- Added button "To send text as code" in chat window.
+- Added button "To send text as Source CODE" in chat window.
 - Fixed a bug in connection to prevent PING before HELLO message.
 - Fixed a bug on using Message History with CTRL+Up / CTRL+Down.
 - Fixed a bug on "Raise chat window on new message".
